--- a/build.gradle
+++ b/build.gradle
@@ -9,22 +9,14 @@ repositories {
 
 import org.gradle.internal.os.OperatingSystem
 
+// Set up platform detection before the dependencies block
+def os = OperatingSystem.current()
+project.ext.platform = os.isWindows() ? "windows" : os.isLinux() ? "linux" : "macos"
+
 project.ext {
     lwjglV = "3.3.3" 
     imguiV = "1.90.0"
     jomlV  = "1.10.8"
-    
-    switch ( OperatingSystem.current() ) {
-        case OperatingSystem.WINDOWS:
-            platform = "windows"
-            break
-        case OperatingSystem.LINUX:
-            platform = "linux"
-            break
-        case OperatingSystem.MAC_OS:
-            platform = "macos"
-            break
-    }
 }
 
 dependencies {
@@ -39,15 +31,32 @@ dependencies {
     implementation "io.github.spair:imgui-java-lwjgl3:${project.imguiV}"
 
     // LWJGL Core & Modules
+    // Using the Bill of Materials (BOM) to ensure all versions match
     implementation platform("org.lwjgl:lwjgl-bom:${project.lwjglV}")
 
-    def modules = ["", "-glfw", "-opengl", "-openal", "-stb", "-assimp", "-vulkan"]
+    def modules = ["", "-glfw", "-opengl", "-openal", "-stb", "-assimp"]
+    def extraModules = ["-vulkan"]
+
     modules.each { m ->
         implementation "org.lwjgl:lwjgl${m}"
-        runtimeOnly "org.lwjgl:lwjgl${m}:natives-${project.platform}"
+        runtimeOnly "org.lwjgl:lwjgl${m}::natives-${project.platform}"
+    }
+
+    extraModules.each { m ->
+	implementation "org.lwjgl:lwjgl${m}"
     }
 }
 
 application {
+    // Ensure this matches your package structure
     mainClass = 'blackjack.game.Main'
+}
+
+// Optional: Ensure the resources folder is correctly processed
+sourceSets {
+    main {
+        resources {
+            srcDirs = ["src/main/resources"]
+        }
+    }
 }
